# blog-to-slideshow-streamlit

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  summarizer_logic.py  testing.py
.streamlit/: config.toml
