[project]
name = "blog-to-slideshow-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "nltk>=3.9.1",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "sentencepiece"
]
